# evolution-simulator

./: .gitignore  LICENSE  README.md
docs/: Overview.md  README.md  SimulationOfEvolutionSpecification.md
src/: CMakeLists.txt  Creature.cpp  Creature.h  Environment.cpp  Environment.h  Main.cpp  Neurons.cpp  Neurons.h  QtGraphics.cpp  QtGraphics.h  utilities.h  vcpkg.cmake  vcpkg.json
src/SimulationOfEvolution/: CMakeLists.txt  Creature.cpp  Creature.h  Environment.cpp  Environment.h  Main.cpp  Neurons.cpp  Neurons.h  QtGraphics.cpp  QtGraphics.h  utilites.h  vcpkg.json
src/SimulationOfEvolution/cmake/: vcpkg.cmake
